# gapbuffer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config.bat  gap_buffer.h  gap_buffer.test.cpp
scripts/: travis_script.sh
